--- a/index.html
+++ b/index.html
@@ -11,55 +11,54 @@ body{margin:40px auto;max-width:650px;line-height:1.2;padding:0 3px;background-c
 h1{text-align: center;}
 h2,h3,h4{line-height:1.2;}
 img{max-width:100%;width:auto;}
+div>img{max-width:33.33%;width:auto;}
 </style>
 </head>
 <body id="body">
+<div><img src="screenshots/s5.png"><img src="screenshots/s10.png"><img src="screenshots/s9.png"> </div>
 <h1>Trackballs</h1>
 <p>
 Trackballs is a marble game inspired by the 80s Atari classic Marble Madness.
 </p>
 <p>
-By steering a marble ball through a labyrinth filled with sharp objecs, pools of acid, and other obstacles the player collects points. When the destination is reached you continue on to the next, more difficult level. - unless the time runs out.
+By steering a marble ball through a labyrinth filled with sharp objecs, pools of acid, and other obstacles the player collects points. When the destination is reached you continue on to the next, more difficult level &mdash; unless the time runs out.
 </p>
 <p>
-Unlike marble madness the game uses 3D graphics even though the original game had no real use for it. Also the game is fully programmable with a scripting extension (Guile), and includes a level editor with which to easily create new levels. 
+Unlike Marble Madness the game uses 3D graphics even though the original game had no real use for it. Also the game is fully programmable with a scripting extension (Guile), and includes a level editor with which to easily create new levels. 
 </p>
 <p>
 One of the goals of the game is to provide entertainment for children and adults alike. The main language for the sourcecode and all development of Trackballs is English but the game has been translated a few other languages including Swedish, German, Italian and French. 
 </p>
 <p>
-<h2>Releases</h2>
+<h3>Releases</h3>
 <p>
 The <a href="https://github.com/trackballs/trackballs/releases">latest release of trackballs</a>. The most recent updates (from 2017) have not yet been packaged by any Linux distributions.
 </p>
 <p>
 The <a href="http://trackballs.sourceforge.net/">original series</a> of Trackballs releases ran up until about 2007, and was maintained by Mathias Broxvall.
 </p>
-<h3>Build requirements</h3>
 <p>
-Currently, Trackballs requires SDL 2.0.5, Guile 2.0, gettext, libz, libm, and any recent OpenGL (newer than 3.1). If you have a slightly older SDL2 version, you may be able to compile by commenting out in "mmad.cc" the uses of <i>SDL_SetWindowResizable</i>. If Trackballs fails to compile, please file an <a href="https://github.com/trackballs/trackballs/issues">issue</a> so that I can resolve the problem.
+Currently, Trackballs requires SDL >=2.0.0, Guile >=2.0.0, gettext, libz, and OpenGL supporting standard 3.3. If Trackballs doesn't work on your system, please file an <a href="https://github.com/trackballs/trackballs/issues">issue</a> so that I can resolve the problem.
 </p>
-<h3>Latest version</h3>
 The  <a href="https://github.com/trackballs/trackballs">repository</a> for the project is located at Github. Contributions of translations, levelsets, and code are welcome! (The code is licensed under the <a href="https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html">GPL</a>.)
-<h2>Documentation</h2>
+<h3>Documentation</h3>
 <p>
 The built-in package documentation is also provided <a href="docs/index.html">here</a>.
 </p>
-<h2>Screenshots</h2>
+<h3>Screenshots</h3>
 <p>
-<a href="screenshots.html">More screenshots.</a>
+<a href="screenshots.html">All screenshots.</a>
 </p>
 <p>
 <img src="screenshots/s1.png">
-<img src="screenshots/s2.png">
 <img src="screenshots/s6.png">
 <img src="screenshots/s14.png">
 </p>
 <p>
-<a href="screenshots.html">More screenshots.</a>
+<a href="screenshots.html">All screenshots.</a>
 </p>
-</body>
 <footer>
-<p>Page last updated: 2017-06-04</p>
+<p>Page last updated: 2017-06-10</p>
 </footer>
+</body>
 </html>
