--- a/screenshots.html
+++ b/screenshots.html
@@ -28,6 +28,17 @@ img{max-width:100%;width:auto;}
 <img src="screenshots/s12.png">
 <img src="screenshots/s13.png">
 <img src="screenshots/s14.png">
+<img src="screenshots/s15.png">
+<img src="screenshots/s16.png">
+<img src="screenshots/s17.png">
+<img src="screenshots/s18.png">
+<img src="screenshots/s19.png">
+<img src="screenshots/s20.png">
+<img src="screenshots/s21.png">
+<img src="screenshots/s22.png">
+<img src="screenshots/s23.png">
+<img src="screenshots/s24.png">
+<img src="screenshots/s25.png">
 <a href="index.html">Back to main page</a>
 </p>
 </body>
