--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ div>img{max-width:33.33%;width:auto;}
 Trackballs is a marble game inspired by the 80s Atari classic Marble Madness.
 </p>
 <p>
-By steering a marble ball through a labyrinth filled with sharp objecs, pools of acid, and other obstacles the player collects points. When the destination is reached you continue on to the next, more difficult level &mdash; unless the time runs out.
+By steering a marble ball through a labyrinth filled with sharp objects, pools of acid, and other obstacles the player collects points. When the destination is reached you continue on to the next, more difficult level &mdash; unless the time runs out.
 </p>
 <p>
 Unlike Marble Madness the game uses 3D graphics even though the original game had no real use for it. Also the game is fully programmable with a scripting extension (Guile), and includes a level editor with which to easily create new levels. 
