--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ div>img{max-width:33.33%;width:auto;}
 </style>
 </head>
 <body id="body">
-<div><img src="screenshots/s5.png"><img src="screenshots/s10.png"><img src="screenshots/s9.png"> </div>
+<div><img src="screenshots/b21.png"><img src="screenshots/b11.png"><img src="screenshots/b28.png"></div>
 <h1>Trackballs</h1>
 <p>
 Trackballs is a marble game inspired by the 80s Atari classic Marble Madness.
@@ -50,15 +50,14 @@ The built-in package documentation is also provided <a href="docs/index.html">he
 <a href="screenshots.html">All screenshots.</a>
 </p>
 <p>
-<img src="screenshots/s20.png">
-<img src="screenshots/s6.png">
-<img src="screenshots/s1.png">
+<img src="screenshots/b01.png">
+<img src="screenshots/b28.png">
 </p>
 <p>
 <a href="screenshots.html">All screenshots.</a>
 </p>
 <footer>
-<p>Page last updated: 2017-09-03</p>
+<p>Page last updated: 2017-11-04</p>
 </footer>
 </body>
 </html>
