--- a/screenshots.html
+++ b/screenshots.html
@@ -8,37 +8,41 @@
 <style type="text/css">
 body{margin:40px auto;max-width:650px;line-height:1.2;padding:0 3px;background-color:#eeffff;}
 h2,h3,h4{line-height:1.2}
-img{max-width:100%;width:auto;}
+img{max-width:49%;width:auto;}
 </style>
 </head>
 <body id="body">
 <h2>Screenshots</h2>
-<p>
-<img src="screenshots/s1.png">
-<img src="screenshots/s2.png">
-<img src="screenshots/s3.png">
-<img src="screenshots/s4.png">
-<img src="screenshots/s5.png">
-<img src="screenshots/s6.png">
-<img src="screenshots/s7.png">
-<img src="screenshots/s8.png">
-<img src="screenshots/s9.png">
-<img src="screenshots/s10.png">
-<img src="screenshots/s11.png">
-<img src="screenshots/s12.png">
-<img src="screenshots/s13.png">
-<img src="screenshots/s14.png">
-<img src="screenshots/s15.png">
-<img src="screenshots/s16.png">
-<img src="screenshots/s17.png">
-<img src="screenshots/s18.png">
-<img src="screenshots/s19.png">
-<img src="screenshots/s20.png">
-<img src="screenshots/s21.png">
-<img src="screenshots/s22.png">
-<img src="screenshots/s23.png">
-<img src="screenshots/s24.png">
-<img src="screenshots/s25.png">
+<div>
+<a href="screenshots/b01.png"><img src="screenshots/b01.png" alt="screenshots/b01.png"></a>
+<a href="screenshots/b02.png"><img src="screenshots/b02.png" alt="screenshots/b02.png"></a></div><div>
+<a href="screenshots/b03.png"><img src="screenshots/b03.png" alt="screenshots/b03.png"></a>
+<a href="screenshots/b04.png"><img src="screenshots/b04.png" alt="screenshots/b04.png"></a></div><div>
+<a href="screenshots/b05.png"><img src="screenshots/b05.png" alt="screenshots/b05.png"></a>
+<a href="screenshots/b06.png"><img src="screenshots/b06.png" alt="screenshots/b06.png"></a></div><div>
+<a href="screenshots/b07.png"><img src="screenshots/b07.png" alt="screenshots/b07.png"></a>
+<a href="screenshots/b08.png"><img src="screenshots/b08.png" alt="screenshots/b08.png"></a></div><div>
+<a href="screenshots/b09.png"><img src="screenshots/b09.png" alt="screenshots/b09.png"></a>
+<a href="screenshots/b10.png"><img src="screenshots/b10.png" alt="screenshots/b10.png"></a></div><div>
+<a href="screenshots/b11.png"><img src="screenshots/b11.png" alt="screenshots/b11.png"></a>
+<a href="screenshots/b12.png"><img src="screenshots/b12.png" alt="screenshots/b12.png"></a></div><div>
+<a href="screenshots/b13.png"><img src="screenshots/b13.png" alt="screenshots/b13.png"></a>
+<a href="screenshots/b14.png"><img src="screenshots/b14.png" alt="screenshots/b14.png"></a></div><div>
+<a href="screenshots/b15.png"><img src="screenshots/b15.png" alt="screenshots/b15.png"></a>
+<a href="screenshots/b16.png"><img src="screenshots/b16.png" alt="screenshots/b16.png"></a></div><div>
+<a href="screenshots/b17.png"><img src="screenshots/b17.png" alt="screenshots/b17.png"></a>
+<a href="screenshots/b18.png"><img src="screenshots/b18.png" alt="screenshots/b18.png"></a></div><div>
+<a href="screenshots/b19.png"><img src="screenshots/b19.png" alt="screenshots/b19.png"></a>
+<a href="screenshots/b20.png"><img src="screenshots/b20.png" alt="screenshots/b20.png"></a></div><div>
+<a href="screenshots/b21.png"><img src="screenshots/b21.png" alt="screenshots/b21.png"></a>
+<a href="screenshots/b22.png"><img src="screenshots/b22.png" alt="screenshots/b22.png"></a></div><div>
+<a href="screenshots/b23.png"><img src="screenshots/b23.png" alt="screenshots/b23.png"></a>
+<a href="screenshots/b24.png"><img src="screenshots/b24.png" alt="screenshots/b24.png"></a></div><div>
+<a href="screenshots/b25.png"><img src="screenshots/b25.png" alt="screenshots/b25.png"></a>
+<a href="screenshots/b26.png"><img src="screenshots/b26.png" alt="screenshots/b26.png"></a></div><div>
+<a href="screenshots/b27.png"><img src="screenshots/b27.png" alt="screenshots/b27.png"></a>
+<a href="screenshots/b28.png"><img src="screenshots/b28.png" alt="screenshots/b28.png"></a>
+</div>
 <a href="index.html">Back to main page</a>
 </p>
 </body>
