link to more distributions

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ One of the goals of the game is to provide entertainment for children and adults
 <p>
 <h3>Releases</h3>
 <p>
-The <a href="https://github.com/trackballs/trackballs/releases">latest release of trackballs</a>. The most recent updates (from 2017) are available for <a href="https://tracker.debian.org/pkg/trackballs">Debian</a> and <a href="https://aur.archlinux.org/packages/trackballs/">Arch Linux</a>.
+The <a href="https://github.com/trackballs/trackballs/releases">latest release of trackballs</a>. The most recent updates (from 2017) are available for <a href="https://tracker.debian.org/pkg/trackballs">Debian</a>, <a href="https://aur.archlinux.org/packages/trackballs/">Arch Linux</a>, <a href="https://www.freshports.org/games/trackballs">FreeBSD</a>, and <a href="https://repology.org/metapackage/trackballs/versions">more</a>.
 </p>
 <p>
 The <a href="http://trackballs.sourceforge.net/">original series</a> of Trackballs releases ran up until about 2007, and was maintained by Mathias Broxvall.
@@ -57,7 +57,7 @@ The built-in package documentation is also provided <a href="docs/index.html">he
 <a href="screenshots.html">All screenshots.</a>
 </p>
 <footer>
-<p>Page last updated: 2017-11-04</p>
+<p>Page last updated: 2017-12-23</p>
 </footer>
 </body>
 </html>
