Add referrer policy

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name=viewport content="width=device-width, initial-scale=1">
 <meta name="description" content="Trackballs is a marble game inspired by the 80s Atari classic Marble Madness." />
+<meta name="referrer" content="no-referrer">
 <link rel="shortcut icon" href="favicon.ico" />
 <title>Trackballs</title>
 <style type="text/css">
