text revisions, add contact email

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@ Trackballs is a marble game inspired by the 80s Atari classic Marble Madness.
 By steering a marble ball through a labyrinth filled with sharp objects, pools of acid, and other obstacles the player collects points. When the destination is reached you continue on to the next, more difficult level &mdash; unless the time runs out.
 </p>
 <p>
-Unlike Marble Madness the game uses 3D graphics even though the original game had no real use for it. Also the game is fully programmable with a scripting extension (Guile), and includes a level editor with which to easily create new levels. 
+Unlike Marble Madness, the game uses 3D graphics even though the original game had no real use for it. Also, the game is fully programmable with a scripting extension (Guile), and includes a level editor with which to easily create new levels. 
 </p>
 <p>
-One of the goals of the game is to provide entertainment for children and adults alike. The main language for the sourcecode and all development of Trackballs is English but the game has been translated a few other languages including Swedish, German, Italian and French. 
+One of the goals of the game is to provide entertainment for children and adults alike. The main language for the source code and all development of Trackballs is English, but the game has been translated a few other languages including Swedish, German, Italian and French. 
 </p>
 <p>
 <h3>Releases</h3>
@@ -36,12 +36,12 @@ One of the goals of the game is to provide entertainment for children and adults
 The <a href="https://github.com/trackballs/trackballs/releases">latest release of trackballs</a>. The most recent updates (from 2017) are available for <a href="https://tracker.debian.org/pkg/trackballs">Debian</a>, <a href="https://aur.archlinux.org/packages/trackballs/">Arch Linux</a>, <a href="https://www.freshports.org/games/trackballs">FreeBSD</a>, and <a href="https://repology.org/metapackage/trackballs/versions">more</a>.
 </p>
 <p>
-The <a href="http://trackballs.sourceforge.net/">original series</a> of Trackballs releases ran up until about 2007, and was maintained by Mathias Broxvall.
+The <a href="http://trackballs.sourceforge.net/">original series</a> of Trackballs releases ran up until about 2007, and was maintained by Mathias Broxvall. The Trackballs source code is licensed under the <a href="https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html">GPL</a>.
 </p>
 <p>
 Currently, Trackballs requires SDL >=2.0.0, Guile >=2.0.0, gettext, libz, and OpenGL supporting standard 3.3. If Trackballs doesn't work on your system, please file an <a href="https://github.com/trackballs/trackballs/issues">issue</a> so that I can resolve the problem.
 </p>
-The  <a href="https://github.com/trackballs/trackballs">repository</a> for the project is located at Github. Contributions of translations, levelsets, and code are welcome! (The code is licensed under the <a href="https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html">GPL</a>.)
+The <a href="https://github.com/trackballs/trackballs">repository</a> for the project is located at Github. To contribute translations, patches, reviews, or levelsets, file an issue or pull request or contact the mailbox "trackballs" at the domain mstoeckl.com.
 <h3>Documentation</h3>
 <p>
 The built-in package documentation is also provided <a href="docs/index.html">here</a>.
@@ -58,7 +58,7 @@ The built-in package documentation is also provided <a href="docs/index.html">he
 <a href="screenshots.html">All screenshots.</a>
 </p>
 <footer>
-<p>Page last updated: 2017-12-23</p>
+<p>Page last updated: 2018-08-27.</p>
 </footer>
 </body>
 </html>
