Add a screenshot, and remove unlinked ones

--- a/screenshots.html
+++ b/screenshots.html
@@ -43,6 +43,7 @@ img{max-width:49%;width:auto;}
 <a href="screenshots/b26.png"><img src="screenshots/b26.png" alt="screenshots/b26.png"></a></div><div>
 <a href="screenshots/b27.png"><img src="screenshots/b27.png" alt="screenshots/b27.png"></a>
 <a href="screenshots/b28.png"><img src="screenshots/b28.png" alt="screenshots/b28.png"></a>
+<a href="screenshots/b29.png"><img src="screenshots/b29.png" alt="screenshots/b29.png"></a>
 </div>
 <a href="index.html">Back to main page</a>
 </body>
