Update index page

--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@ The built-in package documentation is also provided <a href="docs/index.html">he
 </p>
 <h3>Screenshots</h3>
 <p>
-<a href="screenshots.html">All screenshots.</a>
-</p>
-<p>
+<a href="screenshots.html">
+All screenshots.
 <img src="screenshots/b01.png">
 <img src="screenshots/b28.png">
+</a>
 </p>
 <p>
-<a href="screenshots.html">All screenshots.</a>
 </p>
 <footer>
-<p>Page last updated: 2018-08-27.</p>
+<hr>
+<p>Page last updated: 2020-12-25.</p>
 </footer>
 </body>
 </html>
